--- a/index.css
+++ b/index.css
@@ -75,5 +75,5 @@ button {
   border-style: solid;
   width: 25px;
   height: 25px;
-	transition: width .2s, height .2s;
+	transition: transform .2s ease-in-out, transform .2s ease-in-out;
 }
